# Antagonism

./: Cargo.toml  README.md
src/: main.rs  no_cert_verifier.rs  protocol.rs
src/utils/: mod.rs  string_compat.rs
src_bak/: android_public_key.rs  pairing_auth_context.rs
