[package]
name = "Antagonism"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.21.0"
bytebuffer = "2.1.1"
bytes = "1.4.0"
futures = "0.3.28"
hkdf = "0.12.3"
lazy_static = "1.4.0"
math = "0.10.0"
num-bigint = { version = "0.4.3" }
num-modular = { versin = "0.5.1", features = ["num-bigint"] }
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }

picky = "6.3.0"
rand = "0.8.5"
rcgen = "0.10.0"
rsa = "0.8.2"
sha2 = "0.10.6"
spake2 = "0.3.1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-rustls = { version = "0.24.0", features = ["default", "dangerous_configuration", "early-data", "tls12"] }
